# orderbook

./: Cargo.toml  rustfmt.toml
examples/: btc-orderbook.rs
src/: lib.rs  main.rs
src/binance/: configuration.rs  depth_data.rs  depth_snapshot_data.rs  local_book.rs  manager.rs  manager_communication.rs  manager_process.rs  manager_storage.rs  mod.rs  process.rs  schema.rs  tasks.rs
src/binance/data/: depth_snapshot.rs  depth_update.rs  mod.rs
src/core/: error.rs  exchange.rs  mod.rs  symbol.rs  tokens.rs
