[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4"]}
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version="0.20", features = ["native-tls"]}
reqwest = { version = "0.11" }

[[example]]
name = "btc-orderbook"
path = "examples/btc-orderbook.rs"

