[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80" }
futures = { version = "0.3" }
serde_json = { version = "1.0" }
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11" }

[[example]]
name = "btc-orderbook"
path = "examples/btc-orderbook.rs"
