[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
futures = { version = "0.3" }
reqwest = { version = "0.12" }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1.8", features = ["v4"] }

[[example]]
name = "btc-orderbook"
path = "examples/btc-orderbook.rs"
